Redesign UI to match ChatGPT style - clean modern interface

--- a/index.html
+++ b/index.html
@@ -10,18 +10,7 @@
 </head>
 <body>
     <div class="app-container">
-        <!-- Header -->
-        <header class="header">
-            <div class="header-content">
-                <div class="logo">
-                    <i class="fas fa-brain"></i>
-                    <span>Amrikyy AI</span>
-                </div>
-                <div class="subtitle">مساعد البرمجة الذكي - محمد عبدالعزيز</div>
-            </div>
-        </header>
-
-        <!-- Main Content -->
+        <!-- Main Content - ChatGPT Style Layout -->
         <main class="main-content">
             <!-- Sidebar -->
             <aside class="sidebar">
