🚀 Enhanced Amrikyy AI v2.0 - Advanced RAG System + Smart Dashboard
✨ New Features:
- 📊 Quantum Smart Dashboard with real-time analytics
- 🧠 Enhanced AI chatbot with smart suggestions
- 🎯 AI mode selection (Chat, Code, Analyze)
- ⚡ Context-aware input suggestions
- 📈 Real-time performance monitoring
- 🔗 Professional LinkedIn integration
- 💼 Updated professional bio and credentials

🎛️ Smart Dashboard Features:
- Real-time query and performance analytics
- System health monitoring with live metrics
- RAG accuracy and LLM usage tracking
- Interactive data visualization
- Export and analysis tools
- Quantum-inspired UI design

🤖 Enhanced Chatbot:
- Smart contextual suggestions system
- Multi-mode AI interactions (Chat/Code/Analyze)
- Improved user experience with visual feedback
- Dynamic placeholders and mode indicators
- Enhanced message input with auto-suggestions

👤 Professional Updates:
- 🧠 AI x Web Dev (React, Firebase, LLMs)
- 🔐 Cybersecurity @KSU | ✨ 2× Dean's List + Honor Society
- 📈 Crypto Derivatives Trader | 🏛️ BlackRock Talent Community
- 🔗 LinkedIn: https://www.linkedin.com/in/mohamed-abdelaziz-815797347/

🛠️ Tech Stack Enhanced:
- Frontend: Next.js 14, React 18, Tailwind CSS, Zustand
- Backend: FastAPI, Python 3.11, SQLAlchemy, async/await
- AI: OpenAI GPT-4o, RAG pipeline, Vector embeddings
- Database: PostgreSQL, Redis, Pinecone/Weaviate
- Analytics: Real-time dashboard, performance monitoring
- Deployment: Docker, GitHub Actions, Multi-platform support

🧠 Advanced Expertise Areas:
- AI & Machine Learning (LLMs, RAG systems)
- Web Development (React, Firebase, Next.js)
- Cybersecurity & Network Security
- Crypto Trading & Financial Technology
- Software Architecture & Design Patterns
- Clean Code & SOLID Principles
- Performance Optimization & Analytics
- Real-time Systems & Data Visualization

Created by محمد عبدالعزيز (Amrikyy) - AI & Web Development Expert

--- a/deployment-package/index.html
+++ b/deployment-package/index.html
@@ -28,11 +28,14 @@
                     </div>
                 </div>
 
-                <div class="sidebar-footer">
+                                    <div class="sidebar-footer">
                     <div class="expertise-badge">
                         <i class="fas fa-code"></i>
                         <span>خبير البرمجة</span>
                     </div>
+                    <button onclick="window.open('/dashboard', '_blank')" class="dashboard-link" style="width: 100%; margin-top: 10px; padding: 8px 12px; border-radius: 6px; cursor: pointer; font-size: 12px;">
+                        <i class="fas fa-chart-line"></i> لوحة التحكم الذكية
+                    </button>
                 </div>
             </aside>
 
